# autowiki

./: .gitignore  .gitmodules  README.md  config.yaml  ingest-all-pdfs.sh  ingest-single-pdf.sh  pyproject.toml  run-all.sh
autowiki/: __init__.py  __main__.py  latex_sanitizer.py  mineru_wrapper.py  olw_integration.py  pipeline.py  watchdog.py
deeptutor/: start-deeptutor.sh  sync-models.sh  sync-wiki-to-deeptutor.sh
prompts/: goal_extraction.md  note_writing.md
