[project]
name = "autowiki"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "llm-baseclient @ git+https://github.com/patrickab/llm-baseclient.git@main",
    "obsidian-llm-wiki>=0.8",
    "mineru[all]",
    "pyyaml",
    "watchdog",
    "torch>=2.6",
    "torchvision>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autowiki"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py312"
respect-gitignore = true
line-length = 135

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # bugbear
  "SIM", # simplify
]
ignore = [
  "RUF100",
  "B904"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = ["standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["autowiki"]
split-on-trailing-comma = false

# Enables Ruff formatter with default options (Black-compatible)
[tool.ruff.format]
